# DwK-2025

./: .gitignore  LICENSE  README.md  values.yaml
.github/workflows/: cleanup.yaml  exercises-argo.yaml  exercises.yaml  main.yaml  project-argo.yaml  project-prod.yaml  project-staging.yaml  project.yaml
log_output/: Cargo.toml  Dockerfile  README.md  kustomization.yaml
log_output/create-file/: Cargo.toml  Dockerfile
log_output/create-file/src/: main.rs
log_output/file-output/: Cargo.toml  Dockerfile
log_output/file-output/src/: main.rs
log_output/manifests/: deployment.yaml  gateway.yaml  ingress.yaml  kustomization.yaml  route.yaml
log_output/manifests/log-output/: configmap.yaml  deployment.yaml  service.yaml
log_output/manifests/ping-pong/: analysis.yaml  configmap.yaml  confirmap.yaml  db.yaml  deployment.yaml  kustomization.yaml  rollout.yaml  secret.yaml  service.yaml
log_output/manifests/pv/: persistentvolume.yaml  persistentvolumeclaim.yaml
log_output/ping-pong/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
log_output/ping-pong/.sqlx/: query-a6bd20443eac694588c1ed4068627a95c6e49cb00a32ea6eedbe9333a550d817.json  query-be14c4ba5dc2827c050fa15017194a7364add2a7ba2904e8515134a29338924c.json
log_output/ping-pong/migrations/: 20250603215607_create_pongs_table.sql  20250603215749_insert_counter.sql
log_output/ping-pong/src/: configuration.rs  db.rs  main.rs  startup.rs
log_output/ping-pong/src/routes/: health.rs  mod.rs  pongs.rs
log_output/ping-pong/tests/: api-tests.rs
log_output/src/: main.rs
the_project/: README.md  backup.Dockerfile  kustomization.yaml
the_project/.github/workflows/: main.yaml
the_project/broadcaster/: Cargo.toml  Dockerfile  README.md
the_project/broadcaster/src/: main.rs
the_project/manifests/: deployment.yaml  gateway.yaml  ingress.yaml  kustomization.yaml  route.yaml
the_project/manifests/base/: ingress.yaml  kustomization.yaml
the_project/manifests/base/broadcaster/: configmap.yaml  deployment.yaml  kustomization.yaml
the_project/manifests/base/pv/: persistentvolume.yaml
the_project/manifests/base/todo-app/: configmap.yaml  deployment.yaml  image-cronjob.yaml  service.yaml
the_project/manifests/base/todo-backend/: configmap.yaml  db.yaml  deployment.yaml  kustomization.yaml  secret.yaml  service.yaml  todo-cronjob.yaml
the_project/manifests/broadcaster/base/: deployment.yaml  kustomization.yaml  secret.yaml
the_project/manifests/overlays/production/: backup-job.yaml  broadcaster-dep-patch.yaml  kustomization.yaml  (+1 more)
the_project/manifests/pv/: kustomization.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml
the_project/manifests/todo-app/: configmap.yaml  deployment.yaml  image-cronjob.yaml  ingress.yaml  kustomization.yaml  service.yaml
the_project/manifests/todo-backend/: configmap.yaml  db.yaml  deployment.yaml  service.yaml  todo-cronjob.yaml
the_project/todo-app/: Cargo.toml  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
the_project/todo-app/src/: app_config.rs  lib.rs  main.rs  proxy.ts  startup.rs
the_project/todo-app/src/app/: global-not-found.tsx  globals.css  layout.tsx  page.module.scss  page.tsx
the_project/todo-app/src/components/CreateTodo/: CreateTodo.module.scss  CreateTodo.tsx
the_project/todo-app/src/components/IpsumImage/: IpsumImage.module.scss  IpsumImage.tsx
the_project/todo-app/src/components/TodoList/: TodoList.module.scss  TodoList.tsx  TodoListItem.module.scss  TodoListItem.tsx
the_project/todo-app/src/components/ui/Button/: Button.module.scss  Button.tsx
the_project/todo-app/src/components/ui/Checkbox/: Checkbox.tsx
the_project/todo-app/src/components/ui/Form/: Form.tsx
the_project/todo-app/src/components/ui/Input/: InputGroup.module.scss  InputGroup.tsx
the_project/todo-app/src/components/ui/Spinner/: Spinner.module.scss  Spinner.tsx
the_project/todo-app/src/components/ui/TextInput/: TextInput.module.scss  TextInput.tsx
the_project/todo-app/src/lib/: consts.ts  utils.ts
the_project/todo-app/src/styles/: colors.scss  global.scss  shadows.scss
the_project/todo-app/static/: index.html  index.js
the_project/todo-backend/: Cargo.toml  Dockerfile  bacon.toml  docker-compose.yml
the_project/todo-backend/.sqlx/: query-3caa83936ca3ae9d865b26d89e87e9b624e6c1f73e0433671128b18b5b7e31ef.json  query-8b5d06bf414767d149b4fdef0dd07fbc45a9b7fe8acc4e8196a8e2363588421f.json  query-97f3306e9f69296d26dfc90d051179a52f714710ff312bbc2c50b6bc06aaf521.json  query-9a60ae96398dc07faf7360c43ffdbae23577151585dfea78e60dc4f72a49288b.json  query-d1b7bc7fbe3001b1b88fe812114374447f7559cdc759b817582e5e3dabadc2ad.json
the_project/todo-backend/migrations/: 20250605225446_create_todos_table.sql  20251014204026_add_done_to_todos.sql  20251014204924_make_done_not_null_in_todos.sql
the_project/todo-backend/src/: app_config.rs  db.rs  lib.rs  main.rs  nats.rs  startup.rs
the_project/todo-backend/src/models/: todo.rs
the_project/todo-backend/src/routes/: health.rs
the_project/todo-backend/src/routes/todos/: create.rs  get.rs  mod.rs  put.rs
(+22 files in other folders)
