[package]
name = "broadcaster"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-nats = "0.44"
dotenvy = "0.15"
futures = "0.3"
regex = "1.12"
reqwest = { version = "0.12", features = [
  "blocking",
  "json",
  "stream",
  "rustls-tls",
], default-features = false }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
