[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4"
anyhow = "1.0"
chrono = "0.4"
dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "stream", "rustls-tls"], default-features = false }
tokio = "1.45"
tokio-cron-scheduler = "0.14"


