[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4.0"
anyhow = "1.0"
chrono = "0.4"
config = "0.15"
dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = [
  "blocking",
  "stream",
  "rustls-tls",
], default-features = false }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.14"
