[package]
name = "todo-backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "todo-backend"

[dependencies]
actix-cors = "0.7"
actix-web = "4.11"
anyhow = "1.0"
config = "0.15"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tracing = "0.1"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
unicode-segmentation = "1.12"
uuid = { version = "1.17", features = ["v4", "serde"] }
