[package]
name = "todo-backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "todo-backend"

[dependencies]
actix-web = "4.11"
anyhow = "1.0"
config = "0.15"
dotenvy = "0.15"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
unicode-segmentation = "1.12"
uuid = { version = "1.17", features = ["v4", "serde"] }

[dev-dependencies]
actix-cors = "0.7"
